taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
.task-parent-section {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 25px;
    align-items: start;
}

.task-parent {
    border-style: solid;
    background-color: #E00400;
    display: flex;
    font-weight: bold;
}

.taskparent-content{
    width: 100%;
}

.task-parent.selected{
    box-shadow: 5px 5px 10px;
    transform: scale(1.1);
}

.task-parent > .delete.hide{
    display: none;
}

.task-parent > a.delete {
    position: absolute;
    top: -25px;
    right: -10px;
}

div.task-parent .checkbox-container {
    width: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-right: solid;
}

.checkbox-container > input[type=checkbox]{
    cursor:pointer;
}

.taskparent-skin {
    width: 70%;
    float: right;
    font-size: 12px;
}

.faded {
    opacity: 0.5;
}

.taskparent-title-editor{
    padding-left: 5px;
    overflow: hidden;
}

